kubernetes/apps/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: jellyfin
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: jellyfin
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: Dagobah
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.3.0
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
