kubernetes/apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: web
      port: 80
      targetPort: http
