kubernetes/apps/prowlarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: jellyfin
spec:
  hostnames:
    - "prowlarr.local"
  parentRefs:
    - name: public-gateway
      namespace: kube-system
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 80
